--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.tasks (6.3.2) jammy; urgency=medium
+
+  * Release 6.3.2
+
+ -- Danielle Foré <danielle@elementary.io>  Mon, 24 Jul 2023 08:42:02 -0700
+
 io.elementary.tasks (6.3.1) focal; urgency=medium
 
   * Release 6.3.1 (#344)
