--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.tasks (6.3.3) jammy; urgency=medium
+
+  * Release 6.3.3
+
+ -- Danielle Foré <danielle@elementary.io>  Wed, 31 Jul 2024 10:57:17 -0700
+
 io.elementary.tasks (6.3.2) jammy; urgency=medium
 
   * Release 6.3.2
